Migration java 11